# drakvuf-sandbox

./: pyproject.toml
drakrun/analyzer/postprocessing/: process_graph.py
drakrun/analyzer/postprocessing/plugins/: __init__.py  build_process_tree.py  split_drakmon_log.py
drakrun/analyzer/postprocessing/plugins/process_graph_plugin/: build_process_graph.py  detection.py  events.py  parser.py  process_graph.py
drakrun/web/: api.py
drakrun/web/frontend/: package-lock.json  package.json
drakrun/web/frontend/src/: AnalysisReport.jsx  DetectionInfoView.jsx  ProcessGraph.jsx  ProcessGraphView.jsx  ProcessTreeView.jsx  api.js
