[project]
name = "drakvuf-sandbox"
version = "0.19.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncvnc>=1.3.0",
    "click==8.1.7",
    "dataclasses-json==0.5.6",
    "drakpdb==0.2.2",
    "flare-capa==7.4.0",
    "flask==3.0.3",
    "mslex==1.1.0",
    "orjson==3.9.15",
    "pathvalidate==3.2.0",
    "perception>=0.7.7",
    "pydantic==2.10.6",
    "python-magic==0.4.27",
    "rq==2.3.1",
    "rq-dashboard==0.8.2.2",
    "scipy>=1.15.3",
    "setuptools>=80.7.1",
    "tomli==2.2.1",
    "wheel>=0.45.1",
]

[project.scripts]
drakrun = "drakrun.cli.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
skip_glob = ["drakrun/data/**/*", "drakrun/tools/**/*", "drakrun/web/frontend/**/*"]

[tool.black]
exclude = "drakrun/(data|tools|web/frontend)"

[tool.lint-python]
lint-version = "2"
source = "./drakrun"
use-mypy = false
